--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           
           <nav class="barra">
             <a class="nav_link" href="index.html" data-link>Home</a>
-            <a class="nav_link" href="/adopt" data-link>Adopción</a>
+            <a class="nav_link" href="StrayPaws/adopt" data-link>Adopción</a>
             <a class="nav_link" href="/about" data-link>Nosotros</a>  
             <a class="nav_link" href="/contact" data-link>Contacto</a>  
           </nav>
