--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f55ec7b1bd.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./static/css/styles.css">
+    <link rel="stylesheet" href="StrayPaws/static/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f55ec7b1bd.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="icon"  href="./static/icon.png" type="image/x-icon">
+    <link rel="icon"  href="StrayPaws/static/icon.png" type="image/x-icon">
     <title>Stray Paws</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
       <div class="bar">
         <div class="bar_contenido u-centered" >
           <a class="nav_logo" href="index.html" data-link>
-            <img class="bar_logo" src="./static/location.png" alt="Logo" data-link>
+            <img class="bar_logo" src="StrayPaws/static/location.png" alt="Logo" data-link>
             <h1 id="title" data-link>Stray Paws</h1>
           </a>
   
@@ -67,8 +67,8 @@
 
   </footer>
 
-    <script type="module" src="./static/js/index.js"></script>
-    <script type="module" src="./static/js/validation.js"></script>
+    <script type="module" src="StrayPaws/static/js/index.js"></script>
+    <script type="module" src="StrayPaws/static/js/validation.js"></script>
 </body>
 </html>
 
