--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="bar">
         <div class="bar_contenido u-centered" >
           <a class="nav_logo" href="index.html" data-link>
-            <img class="bar_logo" src="StrayPaws/static/location.png" alt="Logo" data-link>
+            <img class="bar_logo" src="./static/location.png" alt="Logo" data-link>
             <h1 id="title" data-link>Stray Paws</h1>
           </a>
   
