--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </label>
           
           <nav class="barra">
-            <a class="nav_link" href="index.html" data-link>Home</a>
+            <a class="nav_link" href="/" data-link>Home</a>
             <a class="nav_link" href="/adopt" data-link>Adopción</a>
             <a class="nav_link" href="/about" data-link>Nosotros</a>  
             <a class="nav_link" href="/contact" data-link>Contacto</a>  
